--- a/serverless-cr/package.json
+++ b/serverless-cr/package.json
@@ -8,8 +8,8 @@
     "deploy": "twilio-run deploy"
   },
   "dependencies": {
-    "twilio": "^3.56",
-    "@twilio/runtime-handler": "2.0.0"
+    "@twilio/runtime-handler": "2.0.0",
+    "twilio": "^5.4.2"
   },
   "devDependencies": {
     "twilio-run": "^4.0.0"
